[FIX] website: make some mega menu templates more responsive in mobile
The "Images Subtitles" and the "Thumbnails" mega menu templates do not
look good in mobile view, depending on the size of the text written in
them. Indeed, under some breakpoints, the classes force the elements to
be next to each to other, to have two elements by line. So if a big word
is contained in the left one, which is not rare in the German language
for example, the text may overflow to the right one and overlap with it.

This commit fixes this issue by adding more freedom to these mega menu
templates at the problematic breakpoints, so they can be more responsive
with their content, while still looking good.

Step to reproduce:
- In the menu editor, add a mega menu.
- In edit mode, click on the mega menu.
- Select the "Images Subtitles" or the "Thumbnails" template.
- As a first element, write the following title: "Foto- und Fine Art
  Großformatdrucker".
- Save and resize down the screen until it toggles the mobile view.
- Open the mega menu and continue to resize down.
=> At some point, near the "SM" breakpoint, you will notice that the
text becomes too big and overlaps the right element.

opw-4096112

closes odoo/odoo#177274

X-original-commit: 7565c35a9194f237bc78ad0f8b3c8f8a4b112e77

--- a/addons/website/static/src/snippets/s_mega_menu_images_subtitles/000.scss
+++ b/addons/website/static/src/snippets/s_mega_menu_images_subtitles/000.scss
@@ -9,4 +9,13 @@
             background: rgba(0, 0, 0, .05);
         }
     }
+
+    .row > div.col-sm-6 {
+        @include media-breakpoint-down(lg) {
+            min-width: min-content;
+        }
+        @include media-breakpoint-down(md) {
+            min-width: fit-content;
+        }
+    }
 }
